[tool.poetry]
name = "coverage-optimization"
version = "0.1.0"
description = ""
authors = ["Jakub Michalica <208897@vutbr.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
